[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/HUD/Prototyping phase.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Font_Regular20.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/HUD/PhaseStep.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/HUD/next stage.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HUD/PhaseHUD.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PhaseHUD" type="Control"]
margin_right = 232.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( -96, -38 )
script = ExtResource( 5 )

[node name="Phase" type="Sprite" parent="."]
position = Vector2( 116, 31 )
texture = ExtResource( 1 )

[node name="PhaseTitle" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "DPG status application"
align = 1
valign = 2
autowrap = true

[node name="Steps" type="Node2D" parent="."]

[node name="PhaseStep1" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 28, 42 )

[node name="PhaseStep2" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 50, 42 )

[node name="PhaseStep3" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 72, 42 )

[node name="PhaseStep4" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 94, 42 )

[node name="PhaseStep5" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 116, 42 )

[node name="PhaseStep6" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 138, 42 )

[node name="PhaseStep7" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 160, 42 )

[node name="PhaseStep8" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 182, 42 )

[node name="PhaseStep9" parent="Steps" instance=ExtResource( 3 )]
position = Vector2( 204, 42 )

[node name="NextStage" type="Sprite" parent="."]
visible = false
position = Vector2( 116, 31 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="NextStage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -31.0
margin_right = -116.0
margin_bottom = -31.0
custom_styles/focus = SubResource( 1 )
flat = true

[node name="NextPhaseParent" type="Node2D" parent="NextStage"]

[node name="NextPhase" type="Label" parent="NextStage/NextPhaseParent"]
margin_left = -110.0
margin_top = -25.0
margin_right = 110.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Next phase"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="NextStage/Button" to="." method="_on_Button_pressed"]
